# ruff-extended

./: .known-crates  .pre-commit-config.yaml  Cargo.toml  REVIEW.md  dist-workspace.toml  ty.schema.json
.github/workflows/: ci.yaml  release.yml  ty-ecosystem-analyzer.yaml
crates/ruff_benchmark/benches/: ty_walltime.rs
crates/ruff_db/src/: parsed.rs  system.rs
crates/ruff_db/src/diagnostic/: mod.rs
crates/ruff_db/src/system/: memory_fs.rs  os.rs  test.rs
crates/ruff_graph/src/: resolver.rs
crates/ruff_linter/src/: noqa.rs
crates/ty/: Cargo.toml
crates/ty/docs/: rules.md
crates/ty/src/: lib.rs
crates/ty/tests/: file_watching.rs
crates/ty/tests/cli/: config_option.rs
crates/ty_completion_bench/src/: main.rs
crates/ty_completion_eval/src/: main.rs
crates/ty_ide/src/: all_symbols.rs  code_action.rs  completion.rs  docstring.rs  goto.rs  goto_definition.rs  hover.rs  inlay_hints.rs  lib.rs  references.rs  rename.rs  type_hierarchy.rs  will_rename.rs  workspace_symbols.rs
crates/ty_ide/src/call_hierarchy/: incoming_calls.rs
crates/ty_ide/src/docstring/: document.rs
crates/ty_ide/src/docstring/document/: google.rs  numpy.rs  syntax.rs
crates/ty_ide/src/docstring/markdown/: structured.rs
crates/ty_ide/src/docstring/markdown/structured/: body.rs  google.rs
crates/ty_module_resolver/src/: db.rs  lib.rs  list.rs  module.rs  path.rs  program.rs  resolve.rs  settings.rs  testing.rs
crates/ty_plugin_examples/: Cargo.toml
crates/ty_plugin_examples/src/: call_return.rs  class_transform.rs  lib.rs  minidjango.rs  stub_overlay.rs
crates/ty_plugin_examples/tests/: examples.rs
crates/ty_plugin_host/: Cargo.toml  build.rs
crates/ty_plugin_host/src/: lib.rs  wasm.rs
crates/ty_plugin_host/tests/: examples.rs  routing.rs  wasm.rs
crates/ty_plugin_protocol/: Cargo.toml  README.md
crates/ty_plugin_protocol/src/: lib.rs
crates/ty_plugin_protocol/tests/: compatibility.rs  protocol_json.rs
crates/ty_plugin_sdk/: Cargo.toml  README.md
crates/ty_plugin_sdk/src/: dsl.rs  lib.rs  manifest.rs  wasm.rs
crates/ty_plugin_sdk/tests/: sdk.rs
crates/ty_plugin_wasm_fixture/: Cargo.toml
crates/ty_plugin_wasm_fixture/src/: lib.rs
crates/ty_project/: Cargo.toml
crates/ty_project/src/: db.rs  lib.rs
crates/ty_project/src/db/: changes.rs
crates/ty_project/src/metadata/: options.rs  settings.rs
crates/ty_project/src/watch/: project_watcher.rs
crates/ty_python_core/src/: builder.rs  db.rs  environment.rs  predicate.rs  program.rs  scope.rs
crates/ty_python_semantic/: Cargo.toml
crates/ty_python_semantic/resources/mdtest/: bidirectional.md  pep695_type_aliases.md  protocols.md  typed_dict.md
crates/ty_python_semantic/resources/mdtest/assignment/: annotations.md
crates/ty_python_semantic/resources/mdtest/call/: overloads.md  type.md
crates/ty_python_semantic/resources/mdtest/dataclasses/: dataclasses.md
crates/ty_python_semantic/resources/mdtest/directives/: cast.md
crates/ty_python_semantic/resources/mdtest/generics/pep695/: paramspec.md
crates/ty_python_semantic/resources/mdtest/narrow/: isinstance.md  match.md  type_guards.md
crates/ty_python_semantic/resources/mdtest/type_properties/: materialization.md
crates/ty_python_semantic/resources/plugin_fixtures/minidjango/: accounts.py  library.py  minidjango.py  models.py
crates/ty_python_semantic/src/: db.rs  fixes.rs  lib.rs  place.rs  reachability.rs  semantic_model.rs  suppression.rs  types.rs
crates/ty_python_semantic/src/diagnostic/: mod.rs
crates/ty_python_semantic/src/types/: attribute_write.rs  bool.rs  bound_super.rs  call.rs  callable.rs  class.rs  class_base.rs  constraints.rs  context.rs  cyclic.rs  diagnostic.rs  display.rs  enums.rs  equality.rs  function.rs  generics.rs  ide_support.rs  infer.rs  instance.rs  iteration.rs  known_instance.rs  list_members.rs  literal.rs  match_pattern.rs  member.rs  method.rs  mro.rs  narrow.rs  newtype.rs  overrides.rs  plugin.rs  protocol_class.rs  relation.rs  relation_error.rs  set_theoretic.rs  signatures.rs  special_form.rs  subclass_of.rs  subscript.rs  tests.rs  (+8 more)
crates/ty_python_semantic/src/types/call/: bind.rs
crates/ty_python_semantic/src/types/call/bind/: constructor.rs
crates/ty_python_semantic/src/types/class/: dynamic_literal.rs  enum_literal.rs  known.rs  named_tuple.rs  static_literal.rs  typed_dict.rs
crates/ty_python_semantic/src/types/dedicated/: pydantic.rs
crates/ty_python_semantic/src/types/equality/: enums.rs
crates/ty_python_semantic/src/types/infer/: builder.rs
crates/ty_python_semantic/src/types/infer/builder/: annotation_expression.rs  binary_expressions.rs  class.rs  enum_call.rs  function.rs  new_class.rs  subscript.rs  type_call.rs  type_expression.rs  type_form.rs
crates/ty_python_semantic/src/types/infer/builder/post_inference/: typed_dict.rs
crates/ty_python_semantic/src/types/property_tests/: type_generation.rs
crates/ty_python_semantic/src/types/set_theoretic/: builder.rs
crates/ty_python_semantic/tests/: corpus.rs
crates/ty_server/src/: session.rs  system.rs
crates/ty_server/src/server/api/requests/: will_rename_files.rs
crates/ty_server/tests/e2e/: configuration.rs  main.rs  will_rename_files.rs
crates/ty_server/tests/e2e/snapshots/: e2e__commands__debug_command.snap
crates/ty_site_packages/src/: lib.rs
crates/ty_test/: Cargo.toml
crates/ty_test/src/: db.rs  lib.rs
crates/ty_wasm/src/: lib.rs
fuzz/fuzz_targets/: ty_check_invalid_syntax.rs
playground/: package.json
scripts/: publish-crates.py  setup-crates-io-publish.py
