[package]
name = "ty_plugin_sdk"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/regularkevvv/ty-extended"
documentation = "https://docs.rs/ty_plugin_sdk"
repository = "https://github.com/regularkevvv/ruff-extended"
authors = ["Kevin Castro <hola@kev.pe>"]
license.workspace = true
description = "Authoring SDK for ty semantic extensions."
readme = "README.md"
keywords = ["ty", "typing", "extensions"]
categories = ["development-tools"]

[dependencies]
ty_plugin_protocol = { workspace = true }

serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
